--- a/templates/vhost.erb
+++ b/templates/vhost.erb
@@ -1,19 +1,17 @@
 server {
-
-	listen   <%= listen %>; ## listen for ipv4
-	listen   [::]:80 default ipv6only=on; ## listen for ipv6
-
+	listen   <%= listen_ip %>; 
+	<% if ipv6_enable == 'true' %>listen   [<%= ipv6_listen_ip %>]:<%= ipv6_listen_port %> default ipv6only=on;<% end %>
 	server_name  <%= name %>;
 
-	access_log  <%= scope.lookupvar('nginx::params::log_dir')%>/<%= name %>.access.log;
+	access_log  <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= name %>.access.log;
 
 	location / {
 		root   <%= www_root %>;
-		index  index.html index.htm;
+		index <% index_files.each do |i| %> <%= i %> <% end %>; 
 	}
 }
 
-<% if ssl == 'on' %>
+<% if ssl == 'true' %>
 server {
 	listen   	 443;
 	server_name  <%= name %>;
