Changed module to use pupmod-concat (zertico's fork) instead of its own implementation of file fragment pattern
- SSL option now is (present|absent)

--- a/tests/vhost_ssl.erb
+++ b/tests/vhost_ssl.erb
@@ -3,7 +3,7 @@ include nginx
 nginx::resource::vhost { 'test2.local':
   ensure   => present,
   www_root => '/var/www/nginx-default',
-  ssl      => 'true',
+  ssl      => present,
   ssl_cert => '/tmp/server.crt',
   ssl_key  => '/tmp/server.pem',
 }
