--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -1,4 +1,8 @@
   location <%= location %> {
+  <% if ssl == 'true' and has_variable?("ssl_proxy") %>
+    proxy_pass <%= ssl_proxy %>;
+  <% else %>
     proxy_pass <%= proxy %>;
+  <% end %>
   }
 
