add ssl_verify_depth support to nginx

--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -8,6 +8,7 @@ server {
   ssl_certificate_key  <%= ssl_key %>;
 
   ssl_session_timeout  5m;
+  ssl_verify_depth     <%= ssl_depth %>
 
   ssl_protocols  SSLv3 TLSv1;
   ssl_ciphers  ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
