remove defined conditionals as it will fail the entire function

--- a/templates/vhost/vhost_ssl_client_header.erb
+++ b/templates/vhost/vhost_ssl_client_header.erb
@@ -1,4 +1,4 @@
-  <% if ssl_client == true && (defined? ssl_client_cert) && (defined? ssl_verify_client) %>
+  <% if ssl_client == true %>
   ssl_client_certificate <%= ssl_client_cert %>;
   ssl_verify_client      <%= ssl_verify_client %>;<% end %>
   
