--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -1,5 +1,5 @@
 server {
-  listen <%= listen_ip %>:<%= listen_port %>; 
+  listen <%= listen_ip %>:<%= listen_port %><% if default_vhost == true %> default<% end %>;
   <% # check to see if ipv6 support exists in the kernel before applying %>
   <% if ipv6_enable == 'true' && (defined? ipaddress6) %>listen [<%= ipv6_listen_ip %>]:<%= ipv6_listen_port %> default ipv6only=on;<% end %>
   server_name <%= name %>;
