--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -1,6 +1,8 @@
 server {
-  listen <%= listen_ip %>; 
+  listen                <%= listen_ip %>;
   <% # check to see if ipv6 support exists in the kernel before applying %>
-  <% if ipv6_enable == 'true' && (defined? ipaddress6) %>listen [<%= ipv6_listen_ip %>]:<%= ipv6_listen_port %> default ipv6only=on;<% end %>
-  server_name <%= name %>;
-  access_log  <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= name %>.access.log;
+  <% if ipv6_enable == 'true' && (defined? ipaddress6) %>
+  listen [<%= ipv6_listen_ip %>]:<%= ipv6_listen_port %> default ipv6only=on;
+  <% end %>
+  server_name           <%= rewrite_www_to_non_www ? name.gsub(/^www\./, '') : name %>;
+  access_log            <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= name %>.access.log;
