more fixes for timeout and https header issue

--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -1,4 +1,7 @@
   location <%= location %> {
     proxy_pass <%= proxy %>;
+    <% scope.lookupvar('nginx::params::nx_proxy_set_https_header').each do |header| %>
+    proxy_set_header <%= header %>
+    <% end %>
   }
 
