Moved worker_connections, worker_process and proxy_set_header to the new structure, backwards compatible
Defaults are set inside params, nginx class will set default and send it from local var to nginx::config,
so even when there is no need for set default values on nginx::config, in case someone already using
this module it's for some reason calling directly nginx::config, to avoid breaking anything defaults are
set inside nginx::config too.

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -1,11 +1,11 @@
 user <%= scope.lookupvar('nginx::config::nx_daemon_user') %>;
-worker_processes <%= scope.lookupvar('nginx::params::nx_worker_processes')%>;
+worker_processes <%= worker_processes %>;
 
 error_log  <%= scope.lookupvar('nginx::params::nx_logdir')%>/error.log;
 pid        <%= scope.lookupvar('nginx::params::nx_pid')%>;
 
 events {
-  worker_connections <%= scope.lookupvar('nginx::params::nx_worker_connections') %>;
+  worker_connections <%= worker_connections %>;
   <% if scope.lookupvar('nginx::params::nx_multi_accept' == 'on') %>multi_accept on;<% end %>
 }
 
