--- a/templates/vhost/vhost_location_alias.erb
+++ b/templates/vhost/vhost_location_alias.erb
@@ -1,3 +1,9 @@
   location <%= location %> {
+<% if @location_cfg_prepend -%<% location_cfg_prepend.each do |key,value| -%>
+    <%= key %> <%= value %>;
+<% end -%><% end -%>
     alias  <%= location_alias %>;
+<% if @location_cfg_append -%><% location_cfg_append.each do |key,value| -%>
+    <%= key %> <%= value %>;
+<% end -%><% end -%>
   }
