--- a/templates/vhost/vhost_location_stub_status.erb
+++ b/templates/vhost/vhost_location_stub_status.erb
@@ -1,9 +1,9 @@
   location <%= location %> {
-<% if @location_cfg_prepend -%><% location_cfg_prepend.each do |key,value| -%>
+<% if @location_cfg_prepend -%><% location_cfg_prepend.sort_by {|key,value| key}.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%><% end -%>
     stub_status on;
-<% if @location_cfg_append -%><% location_cfg_append.each do |key,value| -%>
+<% if @location_cfg_append -%><% location_cfg_append.sort_by {|key,value| key}.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%><% end -%>
   }
