--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -6,3 +6,6 @@ server {
   <% end %>
   server_name           <%= rewrite_www_to_non_www ? name.gsub(/^www\./, '') : server_name.join(" ") %>;
   access_log            <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= name %>.access.log;
+  <% if @server_opts -%><% server_opts.sort_by {|key,value| key}.each do |key,value| -%>
+  <%= key %> <%= value %>;
+  <% end -%><% end -%>
