--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -3,6 +3,9 @@
     <%= key %> <%= value %>;
 <% end -%><% end -%>
     root  <%= www_root %>;
+    <% if has_variable?("try_files") then %>
+    try_files <% try_files.each do |try| -%> <%= try %> <% end -%>;
+    <% end %>
     index <% index_files.each do |i| %> <%= i %> <% end %>; 
 <% if @location_cfg_append -%><% location_cfg_append.each do |key,value| -%>
     <%= key %> <%= value %>;
