--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -1,8 +1,27 @@
   location <%= location %> {
+    <% if has_variable?("www_root") then %>
     root  <%= www_root %>;
+    <% end %>
+
+    <% if has_variable?("index_files") then %>
     index <% index_files.each do |i| %> <%= i %> <% end %>;
+    <% end %>
+
+    <% if rewrite_rules.respond_to?("each") %>
+    <% rewrite_rules.each do |rule| %>
+    rewrite <%= rule %>;
+    <% end %>
+    <% elsif rewrite_rules.respond_to("to_s") %>
+    <%= rewrite_rules %>;
+    <% end %>
+
+    <% if has_variable?("extra") then %>
+    <% extra.each do |ex| %>
+    <%= ex %>;
+    <% end %>
+    <% end %>
 
     <% if has_variable?("try_files") then %>
     try_files <% try_files.each do |try| -%> <%= try %> <% end -%>;
-    <% end %>
+    <% end %> 
   }
