--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -5,8 +5,8 @@ error_log  <%= scope.lookupvar(['nginx::params::nx_logdir'])%>/error.log;
 pid        <%= scope.lookupvar(['nginx::params::nx_pid'])%>;
 
 events {
-  worker_connections <%= scope.lookupvar(['nginx::params::nx_worker_connections']) %>;
-  <% if scope.lookupvar(['nginx::params::nx_multi_accept']) %>multi_accept on;<% end %>
+  worker_connections <%= scope.lookupvar(['nginx::params::nx_worker_connections']) -%>;
+  multi_accept <% scope.lookupvar(['nginx::params::nx_multi_accept']) -%>;
 }
 
 http {
@@ -17,17 +17,13 @@ http {
 
   sendfile    <%= scope.lookupvar(['nginx::params::nx_sendfile'])%>;
 
-  <% if scope.lookupvar(['nginx::params::nx_tcp_nopush']) %>
-  tcp_nopush  on;
-  <% end %>
+  tcp_nopush <% if scope.lookupvar(['nginx::params::nx_tcp_nopush']) -%>;
 
   keepalive_timeout  <%= scope.lookupvar(['nginx::params::nx_keepalive_timeout'])%>;
   tcp_nodelay        <%= scope.lookupvar(['nginx::params::nx_tcp_nodelay'])%>;
 
-  <% if scope.lookupvar(['nginx::params::nx_gzip']) %> 
-  gzip         on;
+  gzip <% scope.lookupvar(['nginx::params::nx_gzip']) -%>;
   gzip_disable "MSIE [1-6]\.(?!.*SV1)";
-  <% end %>
 
   include /etc/nginx/conf.d/*.conf;
 }
