--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -2,7 +2,7 @@
     proxy_pass <%= proxy %>;
     proxy_read_timeout <%= proxy_read_timeout %>;
     <% if rewrite_rules.respond_to?("each") -%>
-    <% rewrite_rules.each do |rule| -%>
+    <% rewrite_rules.each do |rule| %>
     rewrite <%= rule %>;
     <% end %>
     <% elsif rewrite_rules.respond_to("to_s") -%>
