--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -7,7 +7,5 @@
     index <% index_files.each do |i| %> <%= i %> <% end %>;
     <% end %>
 
-    <% if has_variable?("try_files") then %>
-    try_files <% try_files.each do |try| -%> <%= try %> <% end -%>;
-    <% end %> 
+   # Put stuff back here
   }
