Add preserve host to erb

--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -1,6 +1,7 @@
   location <%= location %> {
     proxy_pass <%= proxy %>;
     proxy_read_timeout <%= proxy_read_timeout %>;
+    proxy_set_header Host $http_host;
     #Removed rewrite stuff
   }
 
