--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -2,6 +2,7 @@
     proxy_pass <%= proxy %>;
     proxy_read_timeout <%= proxy_read_timeout %>;
     proxy_set_header Host $http_host;
+    proxy_set_header X-Forwarded-For $remote_addr;
     #Removed rewrite stuff
   }
 
