Remove trailing ; from cfg

--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -1,6 +1,6 @@
 server {
   <% if @vhost_cfg_prepend -%><% vhost_cfg_prepend.each do |key,value| -%>
-    <%= key %> <%= value %>;
+    <%= key %> <%= value %>
   <% end -%><% end -%>
   listen                <%= listen_ip %>:<%= listen_port %> <% if @listen_options %><%= listen_options %><% end %>;
   <% # check to see if ipv6 support exists in the kernel before applying %>
@@ -10,5 +10,5 @@ server {
   server_name           <%= rewrite_www_to_non_www ? name.gsub(/^www\./, '') : server_name.join(" ") %>;
   access_log            <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= name %>.access.log;
   <% if @vhost_cfg_append -%><% vhost_cfg_append.each do |key,value| -%>
-    <%= key %> <%= value %>;
+    <%= key %> <%= value %>
   <% end -%><% end -%>
