Add log format option to vhost

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -10,6 +10,9 @@ events {
 }
 
 http {
+<% if @http_cfg_prepend -%><% vhost_cfg_prepend.each do |key,value| -%>
+  <%= key %> <%= value %>
+<% end -%><% end -%>
   include       /etc/nginx/mime.types;
   default_type  application/octet-stream;
 
@@ -30,4 +33,7 @@ http {
   <% end %>
 
   include /etc/nginx/conf.d/*.conf;
+<% if @http_cfg_append -%><% vhost_cfg_prepend.each do |key,value| -%>
+  <%= key %> <%= value %>
+<% end -%><% end -%>
 }
