Add log format option to vhost

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -10,7 +10,7 @@ events {
 }
 
 http {
-<% if @http_cfg_prepend -%><% vhost_cfg_prepend.each do |key,value| -%>
+<% if @http_cfg_prepend -%><% http_cfg_prepend.each do |key,value| -%>
   <%= key %> <%= value %>
 <% end -%><% end -%>
   include       /etc/nginx/mime.types;
@@ -33,7 +33,7 @@ http {
   <% end %>
 
   include /etc/nginx/conf.d/*.conf;
-<% if @http_cfg_append -%><% vhost_cfg_prepend.each do |key,value| -%>
+<% if @http_cfg_append -%><% http_cfg_append.each do |key,value| -%>
   <%= key %> <%= value %>
 <% end -%><% end -%>
 }
