add support for mail module
See http://wiki.nginx.org/Modules#Mail_modules

Sample Usage:

 nginx::resource::mailhost { 'domain1.example':
   ensure      => present,
   auth_http   => 'server2.example/cgi-bin/auth',
   protocol    => 'smtp',
   listen_port => 587,
   ssl_port    => 465,
   starttls    => 'only',
   xclient     => 'off',
   ssl         => 'true',
   ssl_cert    => '/tmp/server.crt',
   ssl_key     => '/tmp/server.pem',
 }

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -31,3 +31,8 @@ http {
 
   include /etc/nginx/conf.d/*.conf;
 }
+<% if scope.lookupvar('nginx::mail') %>
+mail {
+  include /etc/nginx/conf.mail.d/*.conf;
+}
+<% end -%>
