--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -2,8 +2,12 @@
 <% if @location_cfg_prepend -%><% location_cfg_prepend.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%><% end -%>
-    proxy_pass <%= proxy %>;
-    proxy_read_timeout <%= proxy_read_timeout %>;
+<% if proxy_cache -%>
+    proxy_cache         <%= proxy_cache %>;
+    proxy_cache_valid   <%= proxy_cache_valid %>;
+<% end -%>
+    proxy_pass          <%= proxy %>;
+    proxy_read_timeout  <%= proxy_read_timeout %>;
 <% if @location_cfg_append -%><% location_cfg_append.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%><% end -%>
