Add new line to template

--- a/templates/vhost/vhost_location_fastcgi.erb
+++ b/templates/vhost/vhost_location_fastcgi.erb
@@ -1,7 +1,8 @@
 location <%= location %> {
   include <%= fastcgi_params %>;
   fastcgi_pass <%= fastcgi %>;
-  <% unless fastcgi_script == :undef %>
+<% unless fastcgi_script == :undef %>
     fastcgi_param SCRIPT_FILENAME <%= fastcgi_script %>;
-  <% end %>
-} 
+<% end -%>
+}
+
