--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -6,8 +6,10 @@
     <% if @try_files -%>
     try_files <% try_files.each do |try| -%> <%= try %> <% end -%>;
     <% end -%>
-    index <% index_files.each do |i| %> <%= i %> <% end %>; 
+   <% if index_files -%>
+index <% index_files.each do |i| %> <%= i %> <% end %>; 
+   <% end -%>
 <% if @location_cfg_append -%><% location_cfg_append.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%><% end -%>
-  }
+}
