Changed SSL ciphers to the recent default for Nginx which is much     more secure Added SSL caching to speed up SSL requests Add server_tokens to the global config so this can be turned on|off     between dev and prod Add proxy_set_header to vhost as different vhosts may require different     headers and the global setting is not ideal Minor space formatting so that the generated files are fractionally     more readable

--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -6,3 +6,6 @@ server {
   <% end %>
   server_name           <%= rewrite_www_to_non_www ? name.gsub(/^www\./, '') : server_name.join(" ") %>;
   access_log            <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= name %>.access.log;
+
+  <% proxy_set_header.each do |header| %>
+  proxy_set_header        <%= header %>;<% end %>
