--- a/templates/conf.d/upstream.erb
+++ b/templates/conf.d/upstream.erb
@@ -1,8 +1,6 @@
 upstream <%= name %> {
 <% if @upstream_cfg_prepend -%><% upstream_cfg_prepend.each do |key,value| -%>
-  <%= key %> <%= value %>;
-<% end -%><% end -%>
+  <%= key %> <%= value %>;<% end -%><% end -%>
   <% members.each do |i| %>
-  server <%= i %>;
-  <% end %>
+  server     <%= i %>;<% end %>
 }
