--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -1,10 +1,8 @@
   location <%= location %> {
 <% if @location_cfg_prepend -%><% location_cfg_prepend.each do |key,value| -%>
-    <%= key %> <%= value %>;
-<% end -%><% end -%>
-    proxy_pass <%= proxy %>;
+    <%= key %>         <%= value %>;<% end -%><% end -%>
+    proxy_pass         <%= proxy %>;
     proxy_read_timeout <%= proxy_read_timeout %>;
 <% if @location_cfg_append -%><% location_cfg_append.each do |key,value| -%>
-    <%= key %> <%= value %>;
-<% end -%><% end -%>
+    <%= key %>         <%= value %>;<% end -%><% end -%>
   }
