--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -5,12 +5,13 @@ server {
   <% end %>
   server_name  <%= rewrite_www_to_non_www ? name.gsub(/^www\./, '') : server_name.join(" ") %>;
 
-  ssl on;
-  ssl_certificate      <%= ssl_cert %>;
-  ssl_certificate_key  <%= ssl_key %>;
+  ssl                       on;
+  ssl_certificate           <%= ssl_cert %>;
+  ssl_certificate_key       <%= ssl_key %>;
+  ssl_session_cache         shared:SSL:10m;
+  ssl_session_timeout       10m;
+  ssl_ciphers               HIGH:!aNULL:!MD5;
+  ssl_prefer_server_ciphers on;
 
-  ssl_session_timeout  5m;
-
-  ssl_protocols  SSLv3 TLSv1;
-  ssl_ciphers  ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
-  ssl_prefer_server_ciphers   on;
+  <% proxy_set_header.each do |header| %>
+  proxy_set_header        <%= header %>;<% end %>
