Added support for SPDY now that nginx 1.4 has arrived

--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -1,5 +1,5 @@
 server {
-  listen       <%= ssl_port %>;
+  listen       <%= ssl_port %><% if scope.lookupvar('nginx::params::nx_spdy') == 'on' %> ssl spdy<% end %>;
   <% if ipv6_enable == 'true' && (defined? ipaddress6) %>
   listen [<%= ipv6_listen_ip %>]:<%= ipv6_listen_port %> <% if @ipv6_listen_options %><%= ipv6_listen_options %><% end %> ipv6only=on;
   <% end %>
@@ -12,6 +12,8 @@ server {
   ssl_session_timeout       10m;
   ssl_ciphers               HIGH:!aNULL:!MD5;
   ssl_prefer_server_ciphers on;
+  <% if scope.lookupvar('nginx::params::nx_spdy') == 'on' %>
+  spdy_headers_comp         1;<% end %>
 
   <% proxy_set_header.each do |header| %>
   proxy_set_header        <%= header %>;<% end %>
