--- a/templates/vhost/vhost_footer.erb
+++ b/templates/vhost/vhost_footer.erb
@@ -1,3 +1,6 @@
+<% if @include_files %><% @include_files.each do |file| -%>
+include <%= file %>;
+<% end -%><% end -%>
 }
 
 <% if rewrite_www_to_non_www %>
