* Fixed listen parameter in template vhost_ssl_header * Added auth basic support * Added vhost_cfg_append parameter to `nginx::resource::vhost`

--- a/templates/vhost/vhost_footer.erb
+++ b/templates/vhost/vhost_footer.erb
@@ -1,3 +1,8 @@
+
+<% if @vhost_cfg_append -%><% vhost_cfg_append.each do |key,value| -%>
+  <%= key %> <%= value %>;
+<% end -%><% end -%>
+
 }
 
 <% if rewrite_www_to_non_www %>
