--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -6,4 +6,10 @@ server {
   <% end %>
   server_name           <%= rewrite_www_to_non_www ? name.gsub(/^www\./, '') : server_name.join(" ") %>;
   access_log            <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= name %>.access.log;
+  <% if defined? auth_basic -%>
+auth_basic           "<%= auth_basic %>";
+  <% end -%>
+  <% if defined? auth_basic_user_file -%>
+auth_basic_user_file <%= auth_basic_user_file %>;
+  <% end -%>
 
