--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -3,13 +3,19 @@
     <%= key %> <%= value %>;
 <% end -%><% end -%>
     root  <%= www_root %>;
-    <% if @try_files -%>
+<% if @try_files -%>
     try_files <% try_files.each do |try| -%> <%= try %> <% end -%>;
-    <% end -%>
-   <% if index_files -%>
-index <% index_files.each do |i| %> <%= i %> <% end %>; 
-   <% end -%>
+<% end -%>
+<% if index_files -%>
+    index <% index_files.each do |i| %> <%= i %><% end %>; 
+<% end -%>
+<% if defined? auth_basic -%>
+    auth_basic           "<%= auth_basic %>";
+<% end -%>
+<% if defined? auth_basic_user_file -%>
+    auth_basic_user_file <%= auth_basic_user_file %>;
+<% end -%>
 <% if @location_cfg_append -%><% location_cfg_append.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%><% end -%>
-}
+  }
