ssl-certs arre provided as path

--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -7,8 +7,10 @@ server {
 
   ssl on;
 
-  ssl_certificate           <%= scope.lookupvar('nginx::params::nx_conf_dir') %>/<%= name.gsub(' ', '_') %>.crt;
-  ssl_certificate_key       <%= scope.lookupvar('nginx::params::nx_conf_dir') %>/<%= name.gsub(' ', '_') %>.key;
+  #ssl_certificate           <%= scope.lookupvar('nginx::params::nx_conf_dir') %>/<%= name.gsub(' ', '_') %>.crt;
+  #ssl_certificate_key       <%= scope.lookupvar('nginx::params::nx_conf_dir') %>/<%= name.gsub(' ', '_') %>.key;
+  ssl_certificate           <%= ssl_cert %>;
+  ssl_certificate_key       <%= ssl_key %>;
   ssl_session_cache         shared:SSL:10m;
   ssl_session_timeout       5m;
   ssl_ciphers               RC4:HIGH:!aNULL:!MD5;  
