Add ability to configure events use.

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -8,7 +8,7 @@ pid        <%= scope.lookupvar('nginx::params::nx_pid')%>;
 events {
   worker_connections <%= worker_connections -%>;
 <% if scope.lookupvar('nginx::params::nx_multi_accept') == 'on' %>multi_accept on;<% end -%>
-<% if scope.lookupvar('nginx::params::nx_events_use') %>use <%= scope.lookupvar('nginx::params::nx_events_use')%>;<% end -%>
+<% if has_variable?("events_use") %>use <%= events_use %>;<% end -%>
 }
 
 http {
