--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -1,6 +1,6 @@
 user <%= scope.lookupvar('nginx::config::nx_daemon_user') %>;
 worker_processes <%= worker_processes %>;
-<% if has_variable?("worker_rlimit_nofile") %>worker_rlimit_nofile <%= worker_rlimit_nofile %>;<%end -%>
+<% if @worker_rlimit_nofile %>worker_rlimit_nofile <%= worker_rlimit_nofile %>;<%end -%>
 
 error_log  <%= scope.lookupvar('nginx::config::nx_logdir')%>/error.log;
 pid        <%= scope.lookupvar('nginx::params::nx_pid')%>;
@@ -8,7 +8,7 @@ pid        <%= scope.lookupvar('nginx::params::nx_pid')%>;
 events {
   worker_connections <%= worker_connections -%>;
 <% if scope.lookupvar('nginx::params::nx_multi_accept') == 'on' %>multi_accept on;<% end -%>
-<% if has_variable?("events_use") %>use <%= events_use %>;<% end -%>
+<% if @events_use %>use <%= events_use %>;<% end -%>
 }
 
 http {
