--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -13,20 +13,20 @@ events {
 
 http {
   include       /etc/nginx/mime.types;
-  default_type  application/octet-stream;
+  default_type  <%= @default_type %>;
 
   access_log  <%= logdir %>/access.log;
 
   sendfile    <%= scope.lookupvar('nginx::params::nx_sendfile')%>;
 
   server_tokens <%= server_tokens %>;
-  <% if scope.lookupvar('nginx::params::nx_tcp_nopush') == 'on' %>tcp_nopush on;<% end %>
+  tcp_nopush    <%= @tcp_nopush %>;
 
   types_hash_max_size <%= scope.lookupvar('nginx::params::nx_types_hash_max_size')%>;
   types_hash_bucket_size <%= scope.lookupvar('nginx::params::nx_types_hash_bucket_size')%>;
 
-  keepalive_timeout  <%= scope.lookupvar('nginx::params::nx_keepalive_timeout')%>;
-  tcp_nodelay        <%= scope.lookupvar('nginx::params::nx_tcp_nodelay')%>;
+  keepalive_timeout  <%= @keepalive_timeout %>;
+  tcp_nodelay        <%= @tcp_nodelay %>;
 
   <% if scope.lookupvar('nginx::params::nx_gzip') == 'on' %> 
   gzip         on;
