--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -31,6 +31,10 @@ http {
   gzip         on;
   gzip_disable "MSIE [1-6]\.(?!.*SV1)";
   <% end %>
+  
+  ssl_ciphers RC4:HIGH:!aNULL:!MD5:!kEDH;
+  ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+  ssl_prefer_server_ciphers on;
 
   include /etc/nginx/conf.d/*.conf;
 <% if @http_cfg_append -%><% http_cfg_append.each do |key,value| -%>
