--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -1,35 +1,54 @@
-user <%= scope.lookupvar('nginx::config::nx_daemon_user') %>;
+<% daemon_user            = scope.lookupvar('nginx::daemon_user')
+   events_use             = scope.lookupvar('nginx::events_use')
+   gzip                   = scope.lookupvar('nginx::gzip')
+   keepalive_timeout      = scope.lookupvar('nginx::keepalive_timeout')
+   logdir                 = scope.lookupvar('nginx::logdir')
+   multi_accept           = scope.lookupvar('nginx::multi_accept')
+   names_hash_bucket_size = scope.lookupvar('nginx::names_hash_bucket_size')
+   pid                    = scope.lookupvar('nginx::pid')
+   proxy_cache_inactive   = scope.lookupvar('nginx::proxy_cache_inactive')
+   proxy_cache_keys_zone  = scope.lookupvar('nginx::proxy_cache_keys_zone')
+   proxy_cache_max_size   = scope.lookupvar('nginx::proxy_cache_max_size')
+   proxy_cache_path       = scope.lookupvar('nginx::proxy_cache_path')
+   sendfile               = scope.lookupvar('nginx::sendfile')
+   server_tokens          = scope.lookupvar('nginx::server_tokens')
+   tcp_nopush             = scope.lookupvar('nginx::tcp_nopush')
+   types_hash_bucket_size = scope.lookupvar('nginx::types_hash_bucket_size')
+   types_hash_max_size    = scope.lookupvar('nginx::types_hash_max_size')
+   worker_processes       = scope.lookupvar('nginx::worker_processes')
+-%>
+user <%= daemon_user -%>;
 worker_processes <%= worker_processes %>;
 
-error_log  <%= scope.lookupvar('nginx::params::nx_logdir')%>/error.log;
-pid        <%= scope.lookupvar('nginx::params::nx_pid')%>;
+error_log  <%= logdir -%>/error.log;
+pid        <%= pid -%>;
 
 events {
   worker_connections <%= worker_connections -%>;
-<% if scope.lookupvar('nginx::params::nx_multi_accept') == 'on' %>multi_accept on;<% end -%>
-<% if scope.lookupvar('nginx::params::nx_events_use') %>use <%= scope.lookupvar('nginx::params::nx_events_use')%>;<% end -%>
+<% if multi_accept == 'on' %>multi_accept on;<% end -%>
+<% if events_use -%>use <%= events_use-%>;<% end -%>
 }
 
 http {
   include       /etc/nginx/mime.types;
   default_type  application/octet-stream;
 
-  access_log  <%= scope.lookupvar('nginx::params::nx_logdir')%>/access.log;
+  access_log  <%= nx_logdir -%>/access.log;
 
-  sendfile    <%= scope.lookupvar('nginx::params::nx_sendfile')%>;
+  sendfile    <%= sendfile -%>;
 
   server_tokens <%= server_tokens %>;
-  <% if scope.lookupvar('nginx::params::nx_tcp_nopush') == 'on' %>tcp_nopush on;<% end %>
+  <% if tcp_nopush == 'on' %>tcp_nopush on;<% end %>
 
-  types_hash_max_size <%= scope.lookupvar('nginx::params::nx_types_hash_max_size')%>;
-  types_hash_bucket_size <%= scope.lookupvar('nginx::params::nx_types_hash_bucket_size')%>;
+  types_hash_max_size <%= types_hash_max_size -%>;
+  types_hash_bucket_size <%= types_hash_bucket_size -%>;
 
-  server_names_hash_bucket_size <%= scope.lookupvar('nginx::params::nx_names_hash_bucket_size')%>;
+  server_names_hash_bucket_size <%= names_hash_bucket_size  -%>;
 
-  keepalive_timeout  <%= scope.lookupvar('nginx::params::nx_keepalive_timeout')%>;
-  tcp_nodelay        <%= scope.lookupvar('nginx::params::nx_tcp_nodelay')%>;
+  keepalive_timeout  <%= keepalive_timeout -%>;
+  tcp_nodelay        <%= tcp_nodelay -%>;
 
-  <% if scope.lookupvar('nginx::params::nx_gzip') == 'on' %> 
+  <% if gzip == 'on' %>
   gzip         on;
   gzip_disable "MSIE [1-6]\.(?!.*SV1)";
   <% end -%>
