--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -14,7 +14,7 @@ client_body_buffer_size <%= client_body_buffer_size -%>;
 proxy_connect_timeout   <%= proxy_connect_timeout -%>;
 proxy_send_timeout      <%= proxy_send_timeout -%>;
 proxy_read_timeout      <%= proxy_read_timeout -%>;
-proxy_buffers           <%= sproxy_buffers -%>;
+proxy_buffers           <%= proxy_buffers -%>;
 proxy_http_version      <%= proxy_http_version %>;
 <% proxy_set_header.each do |header| %>
 proxy_set_header        <%= header %>;<% end %>
