Change custom_cfg to location_custom_cfg

--- a/templates/vhost/vhost_location_empty.erb
+++ b/templates/vhost/vhost_location_empty.erb
@@ -1,5 +1,5 @@
   location <%= location %> {
-<% custom_cfg.each do |key,value| -%>
+<% location_custom_cfg.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%>
   }
