--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -1,22 +1,23 @@
 server {
-  listen                <%= listen_ip %>:<%= listen_port %> <% if @listen_options %><%= listen_options %><% end %>;
-  <% # check to see if ipv6 support exists in the kernel before applying %>
-  <% if ipv6_enable == 'true' && (defined? ipaddress6) %>
+  listen                <%= listen_ip %>:<%= listen_port %><% if @listen_options %> <%= listen_options %><% end %>;
+<% # check to see if ipv6 support exists in the kernel before applying %>
+<% if ipv6_enable == 'true' && (defined? ipaddress6) %>
   listen [<%= ipv6_listen_ip %>]:<%= ipv6_listen_port %> <% if @ipv6_listen_options %><%= ipv6_listen_options %><% end %> ipv6only=on;
-  <% end %>
+<% end %>
   server_name           <%= rewrite_www_to_non_www ? name.gsub(/^www\./, '') : server_name.join(" ") %>;
   access_log            <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= name %>.access.log;
-  <% if defined? auth_basic -%>
-auth_basic           "<%= auth_basic %>";
-  <% end -%>
-  <% if defined? auth_basic_user_file -%>
-auth_basic_user_file <%= auth_basic_user_file %>;
-  <% end -%>
+<% if defined? auth_basic -%>
+  auth_basic           "<%= auth_basic %>";
+<% end -%>
+<% if defined? auth_basic_user_file -%>
+  auth_basic_user_file <%= auth_basic_user_file %>;
+<% end -%>
 
-  <% proxy_set_header.each do |header| %>
-  proxy_set_header        <%= header %>;<% end %>
-  <% if @rewrite_to_https %>
+<% proxy_set_header.each do |header| -%>
+  proxy_set_header        <%= header %>;
+<% end -%>
+<% if @rewrite_to_https -%>
   if ($ssl_protocol = "") {
        return 301 https://$host$request_uri ;
   }
-   <% end %>
+<% end -%>
