--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -1,10 +1,11 @@
-proxy_redirect          <%= scope.lookupvar('nginx::params::nx_proxy_redirect') %>;
-client_max_body_size    <%= scope.lookupvar('nginx::params::nx_client_max_body_size') %>;
-client_body_buffer_size <%= scope.lookupvar('nginx::params::nx_client_body_buffer_size') %>;
-proxy_connect_timeout   <%= scope.lookupvar('nginx::params::nx_proxy_connect_timeout') %>;
-proxy_send_timeout      <%= scope.lookupvar('nginx::params::nx_proxy_send_timeout') %>;
-proxy_read_timeout      <%= scope.lookupvar('nginx::params::nx_proxy_read_timeout') %>;
-proxy_buffers           <%= scope.lookupvar('nginx::params::nx_proxy_buffers') %>;
-proxy_http_version      <%= @proxy_http_version %>;
-<% proxy_set_header.each do |header| %>
-proxy_set_header        <%= header %>;<% end %>
+proxy_redirect          <%= @options['proxy_redirect'] %>;
+client_max_body_size    <%= @options['client_max_body_size'] %>;
+client_body_buffer_size <%= @options['client_body_buffer_size'] %>;
+proxy_connect_timeout   <%= @options['proxy_connect_timeout'] %>;
+proxy_send_timeout      <%= @options['proxy_send_timeout'] %>;
+proxy_read_timeout      <%= @options['proxy_read_timeout'] %>;
+proxy_buffers           <%= @options['proxy_buffers'] %>;
+proxy_http_version      <%= @options['proxy_http_version'] %>;
+<% @options['proxy_set_header'].each do |header| %>
+proxy_set_header        <%= header %>;
+<% end %>
