Fix deprecated variable names

--- a/templates/vhost/vhost_location_empty.erb
+++ b/templates/vhost/vhost_location_empty.erb
@@ -1,5 +1,5 @@
-  location <%= location %> {
-<% location_custom_cfg.sort_by {|k,v| k}.each do |key,value| -%>
+  location <%= @location %> {
+<% @location_custom_cfg.sort_by {|k,v| k}.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%>
   }
