--- a/templates/vhost/vhost_footer.erb
+++ b/templates/vhost/vhost_footer.erb
@@ -6,10 +6,10 @@ include <%= file %>;
 <% end -%>
 <% end -%>
 }
-<% if rewrite_www_to_non_www -%>
+<% if @rewrite_www_to_non_www -%>
 server {
-  listen                <%= listen_ip %>;
-  server_name           www.<%= name.gsub(/^www\./, '') %>;
-  rewrite               ^ http://<%= name.gsub(/^www\./, '') %>$uri permanent;
+  listen                <%= @listen_ip %>;
+  server_name           www.<%= @name.gsub(/^www\./, '') %>;
+  rewrite               ^ http://<%= @name.gsub(/^www\./, '') %>$uri permanent;
 }
 <% end %>
