--- a/templates/vhost/vhost_location_fastcgi.erb
+++ b/templates/vhost/vhost_location_fastcgi.erb
@@ -1,9 +1,8 @@
-  location <%= location %> {
-    root  <%= www_root %>;
-    include <%= fastcgi_params %>;
-    fastcgi_pass <%= fastcgi %>;
-<% unless fastcgi_script == :undef %>
-    fastcgi_param SCRIPT_FILENAME <%= fastcgi_script %>;
+  location <%= @location %> {
+    root  <%= @www_root %>;
+    include <%= @fastcgi_params %>;
+    fastcgi_pass <%= @fastcgi %>;
+<% unless @fastcgi_script == :undef %>
+    fastcgi_param SCRIPT_FILENAME <%= @fastcgi_script %>;
 <% end -%>
   }
-
