* Option fastcgi_script fixed * Options location_cfg_append and location_cfg_prepend added to fastcgi template * Option www_root is optional now * Options logging fixed in http template * Auth_basic fixed in SSL vhost header

--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -2,7 +2,9 @@
 <% if @location_cfg_prepend -%><% @location_cfg_prepend.sort_by {|k,v| k}.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%><% end -%>
+<% if defined? @www_root -%>
     root  <%= @www_root %>;
+<% end -%>
 <% if @try_files -%>
     try_files <% @try_files.each do |try| -%> <%= try %> <% end -%>;
 <% end -%>
@@ -19,3 +21,4 @@
     <%= key %> <%= value %>;
 <% end -%><% end -%>
   }
+
