--- a/templates/vhost/vhost_location_fastcgi.erb
+++ b/templates/vhost/vhost_location_fastcgi.erb
@@ -1,8 +1,17 @@
   location <%= @location %> {
+<% if @location_cfg_prepend -%><% @location_cfg_prepend.sort_by {|k,v| k}.each do |key,value| -%>
+    <%= key %>         <%= value %>;
+<% end -%><% end -%>
+<% if defined? @www_root -%>
     root  <%= @www_root %>;
+<% end -%>
     include <%= @fastcgi_params %>;
     fastcgi_pass <%= @fastcgi %>;
-<% unless @fastcgi_script == :undef %>
+<% if defined? @fastcgi_script %>
     fastcgi_param SCRIPT_FILENAME <%= @fastcgi_script %>;
 <% end -%>
+<% if @location_cfg_append -%><% @location_cfg_append.sort_by {|k,v| k}.each do |key,value| -%>
+    <%= key %> <%= value %>;
+<% end -%><% end -%>
   }
+
