add listen_port on rewrite_www_to_non_www
Adding the port in case it is not by default.

--- a/templates/vhost/vhost_footer.erb
+++ b/templates/vhost/vhost_footer.erb
@@ -8,7 +8,7 @@ include <%= file %>;
 }
 <% if @rewrite_www_to_non_www -%>
 server {
-  listen                <%= @listen_ip %>;
+  listen                <%= @listen_ip %>:<%= @listen_port %>;
   server_name           www.<%= @name.gsub(/^www\./, '') %>;
   rewrite               ^ http://<%= @name.gsub(/^www\./, '') %>$uri permanent;
 }
