Fix typo in vhost_header

--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -8,7 +8,7 @@ server {
 <% if defined? @auth_basic -%>
   auth_basic           "<%= @auth_basic %>";
 <% end -%>
-<% if defined? auth_basic_user_file -%>
+<% if defined? @auth_basic_user_file -%>
   auth_basic_user_file <%= @auth_basic_user_file %>;
 <% end -%>
 <% @proxy_set_header.each do |header| -%>
