Adds root directive to vhost_header and vhost_ssl_header templates.
This change will result in there being a 'root' directive in both the
server block, and the location sub-block. This is a perfectly valid
configuration and avoids the possible issue of having a location
with no 'root' if it isn't explicitly set.

--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -45,6 +45,10 @@ server {
     index <% Array(@index_files).each do |i| %> <%= i %><% end %>;
 <% end -%>
 
+<% if defined? @www_root -%>
+  root <%= @www_root %>;
+<% end -%>
+
   access_log            <%= @ssl_access_log %>;
   error_log             <%= @ssl_error_log %>;
   
