Allows passing an array of location_cfg_append values

--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -24,7 +24,12 @@
     auth_basic_user_file <%= @auth_basic_user_file %>;
 <% end -%>
 <% if @location_cfg_append -%><% @location_cfg_append.sort_by {|k,v| k}.each do |key,value| -%>
+<% if value.is_a? Array -%>
+<% value.each do |sub| -%>
+    <%= key %> <%= sub %>;
+<% end %>
+<% else -%>
     <%= key %> <%= value %>;
-<% end -%><% end -%>
+<% end %><% end -%><% end -%>
   }
 
