location_cfg_prepend can take array as parameter

--- a/templates/vhost/vhost_location_alias.erb
+++ b/templates/vhost/vhost_location_alias.erb
@@ -3,6 +3,12 @@
     <%= key %> <%= value %>;<% end -%><% end -%>
     alias      <%= @location_alias %>;
 <% if @location_cfg_append -%><% @location_cfg_append.sort_by {|k,v| k}.each do |key,value| -%>
-    <%= key %> <%= value %>;<% end -%><% end -%>
+<% if value.is_a? Array -%>
+<% value.each do |sub| -%>
+    <%= key %> <%= sub %>;
+<% end %>
+<% else -%>
+    <%= key %> <%= value %>;
+<% end %><% end -%><% end -%>
   }
 
