--- a/templates/vhost/vhost_location_fastcgi.erb
+++ b/templates/vhost/vhost_location_fastcgi.erb
@@ -17,7 +17,12 @@
     fastcgi_param SCRIPT_FILENAME <%= @fastcgi_script %>;
 <% end -%>
 <% if @location_cfg_append -%><% @location_cfg_append.sort_by {|k,v| k}.each do |key,value| -%>
+<% if value.is_a? Array -%>
+<% value.each do |sub| -%>
+    <%= key %> <%= sub %>;
+<% end %>
+<% else -%>
     <%= key %> <%= value %>;
-<% end -%><% end -%>
+<% end %><% end -%><% end -%>
   }
 
