--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -9,7 +9,12 @@
     proxy_pass          <%= @proxy %>;
     proxy_read_timeout  <%= @proxy_read_timeout %>;
 <% if @location_cfg_append -%><% @location_cfg_append.sort_by {|k,v| k}.each do |key,value| -%>
+<% if value.is_a? Array -%>
+<% value.each do |sub| -%>
+    <%= key %> <%= sub %>;
+<% end %>
+<% else -%>
     <%= key %> <%= value %>;
-<% end -%><% end -%>
+<% end %><% end -%><% end -%>
   }
 
