--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -13,8 +13,12 @@ events {
 http {
   include       /etc/nginx/mime.types;
   default_type  application/octet-stream;
+  
+  log_format  vcommon '$host:$server_port $remote_addr - $remote_user [$time_local] "$request" '
+                        '$status $body_bytes_sent "$http_referer" '
+                        '"$http_user_agent"';
 
-  access_log  <%= scope.lookupvar('nginx::params::nx_logdir')%>/access.log;
+  access_log  <%= scope.lookupvar('nginx::params::nx_logdir')%>/access.log vcommon;
 
   sendfile    <%= scope.lookupvar('nginx::params::nx_sendfile')%>;
 
